# aoc-2023

./: Cargo.toml  README.md  justfile
benches/: day02_benchmark.rs  day08_benchmark.rs  day10_benchmark.rs  day12_benchmark.rs  day16_benchmark.rs  day17_benchmark.rs
doc/: day06.md  day08.md  day12.md  day16.md  day17.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_day08.rs
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  grid.rs  lib.rs  template.rs
