[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
itertools = "0.12.0"
nom = "7.1.3"

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "day02_benchmark"
harness = false

[[bench]]
name = "day08_benchmark"
harness = false

[[bench]]
name = "day10_benchmark"
harness = false

[[bench]]
name = "day12_benchmark"
harness = false
